# watchmanix-api

./: .env.example  .pre-commit-config.yaml  backup.sql  pyproject.toml
cli/: main.py
cli/subcommands/: dev.py  generate_key.py  startmodule.py
cli/templates/startmodule/{% raw %}{{ module_name }}{% endraw %}/: endpoints.py.jinja
cli/tools/: color_string_builder.py  constants.py  output.py  utils.py
scripts/: main.py
src/: main.py
src/api/: monitors.py
src/config/: application.py  database.py  gunicorn.py  secrets.py  settings.py
src/database/: database.py  utils.py
src/queries/: monitors.py
src/schemas/: monitors.py
